--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule ".vim/pack/dist/start/rainbow_csv"]
 	path = .vim/pack/dist/start/rainbow_csv
 	url = git@github.com:mechatroner/rainbow_csv.git
+	ignore = dirty
 [submodule ".vim/pack/dist/start/vim-airline"]
 	path = .vim/pack/dist/start/vim-airline
 	url = git@github.com:vim-airline/vim-airline.git
